Fix horizontal scroll bar, change colors from lt. blue to lt. red

--- a/app_client/css/skeleton.css
+++ b/app_client/css/skeleton.css
@@ -205,8 +205,8 @@ input[type="submit"].button-primary,
 input[type="reset"].button-primary,
 input[type="button"].button-primary {
   color: #FFF;
-  background-color: #33C3F0;
-  border-color: #33C3F0; }
+  background-color: rgba(99, 173, 242, 1);
+  border-color: rgba(99, 173, 242, 1); }
 .button.button-primary:hover,
 button.button-primary:hover,
 input[type="submit"].button-primary:hover,
@@ -265,7 +265,7 @@ input[type="url"]:focus,
 input[type="password"]:focus,
 textarea:focus,
 select:focus {
-  border: 1px solid #33C3F0;
+  border: 1px solid rgba(99, 173, 242, 1);
   outline: 0; }
 label,
 legend {
